# threading

./: CMakeLists.txt  README.md
examples/: task.cpp
src/: ThreadBase.h  ThreadPoolBase.h  ThreadSafeBase.h
src/query_thread/: QueryBase.h  QueryQueueBase.h  QueryThreadBase.h  QueryThreadPool.h  QueryThreadPoolThread.h  QueryThreadSimple.h  QueryThreadTimeout.h
src/task_thread/: ITask.h  Task.h  TaskThread.h
src/utils/: Condition.h  GuardedDeque.h  GuardedMap.h  PredicateCondition.h  PtrDeclBase.h  SPtrFactoryBase.h
